tests/baselines/reference/autoTypeAssignedUsingDestructuringFromNeverNoCrash.errors.txt
autoTypeAssignedUsingDestructuringFromNeverNoCrash.ts(9,3): error TS2488: Type 'never' must have a '[Symbol.iterator]()' method that returns an iterator.


==== autoTypeAssignedUsingDestructuringFromNeverNoCrash.ts (1 errors) ====
    // https://github.com/microsoft/TypeScript/issues/57582
    
    declare const b: null;
    let file;
    
    if (b === null) {
      // empty
    } else {
      [file] = b;
      ~~~~~~
!!! error TS2488: Type 'never' must have a '[Symbol.iterator]()' method that returns an iterator.
    }
    
    file; // request flow type here
    